<resources>
    <string name="application_name">&TERMUX_APP_NAME;</string>
    <string name="shared_user_label">&TERMUX_APP_NAME; user</string>
    <string name="permission_run_command_label">Run commands in &TERMUX_APP_NAME; environment</string>
    <string name="permission_run_command_description">execute arbitrary commands within &TERMUX_APP_NAME;
        environment and access files</string>
    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_body">&TERMUX_APP_NAME; was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">&TERMUX_APP_NAME; can only be run as the primary user.
        \nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than:\n%1$s.</string>
    <string name="bootstrap_error_installed_on_portable_sd">&TERMUX_APP_NAME; cannot be installed on
        portable/external/removable sd card on your device.
        \nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than:\n%1$s.</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>
    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="action_toggle_text_input">Toggle text input</string>
    <string name="msg_enabling_terminal_toolbar">Enabling Terminal Toolbar</string>
    <string name="msg_disabling_terminal_toolbar">Disabling Terminal Toolbar</string>
    <string name="action_select_url">Select URL</string>
    <string name="title_select_url_dialog">Click URL to copy or long press to open</string>
    <string name="title_select_url_none_found">No URL found in the terminal.</string>
    <string name="msg_select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="title_share_transcript">Terminal transcript</string>
    <string name="title_share_transcript_with">Send transcript to:</string>
    <string name="action_share_selected_text">Share selected text</string>
    <string name="title_share_selected_text">Terminal Text</string>
    <string name="title_share_selected_text_with">Send selected text to:</string>
    <string name="action_autofill_username">Autofill username</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="msg_terminal_reset">Terminal reset</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="title_confirm_kill_process">Really kill this session?</string>
    <string name="action_style_terminal">Style</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="msg_generating_report">Generating Report</string>
    <string name="msg_add_termux_debug_info">Add termux debug info to report?</string>
    <string name="error_styling_not_installed">The &TERMUX_STYLING_APP_NAME; Plugin App is not installed.</string>
        <string name="termux_debugging_preferences_title">Debugging</string>
        <string name="termux_debugging_preferences_summary">Preferences for debugging</string>
            <string name="termux_logging_header">Logging</string>
                <string name="termux_log_level_title">Log Level</string>
                <string name="termux_terminal_view_key_logging_enabled_title">Terminal View Key Logging</string>
                <string name="termux_terminal_view_key_logging_enabled_off">Logs will not have entries for terminal view keys. (Default)</string>
                <string name="termux_terminal_view_key_logging_enabled_on">Logcat logs will have entries for terminal view keys.
                    These are very verbose and should be disabled under normal circumstances or will cause performance issues.</string>
                <string name="termux_plugin_error_notifications_enabled_title">Plugin Error Notifications</string>
                <string name="termux_plugin_error_notifications_enabled_off">Disable flashes and notifications for plugin errors.</string>
                <string name="termux_plugin_error_notifications_enabled_on">Show flashes and notifications for plugin errors. (Default)</string>
                <string name="termux_crash_report_notifications_enabled_title">Crash Report Notifications</string>
                <string name="termux_crash_report_notifications_enabled_off">Disable notifications for crash reports.</string>
                <string name="termux_crash_report_notifications_enabled_on">Show notifications for crash reports. (Default)</string>
        <string name="termux_terminal_io_preferences_title">Terminal I/O</string>
        <string name="termux_terminal_io_preferences_summary">Preferences for terminal I/O</string>
        <string name="termux_terminal_view_preferences_title">Terminal View</string>
        <string name="termux_terminal_view_preferences_summary">Preferences for terminal view</string>
        <string name="termux_properties_preferences_title">Advanced Settings</string>
        <string name="termux_properties_preferences_summary">Advanced settings from termux.properties</string>
            <string name="termux_properties_general_header">General</string>
                <string name="termux_bell_character_title">Bell Character</string>
                <string name="termux_back_key_title">Back Key</string>
                <string name="termux_volume_keys_title">Volume Keys</string>
                <string name="termux_soft_keyboard_toggle_title">Soft Keyboard Toggle</string>
                <string name="termux_night_mode_title">Night Mode</string>
                <string name="termux_default_working_directory_title">Default Working Directory</string>
                <string name="termux_extra_keys_style_title">Extra Keys Style</string>
            <string name="termux_properties_terminal_header">Terminal</string>
                <string name="termux_terminal_cursor_style_title">Cursor Style</string>
                <string name="termux_terminal_cursor_blink_rate_title">Cursor Blink Rate</string>
                <string name="termux_terminal_transcript_rows_title">Transcript Rows</string>
                <string name="termux_terminal_margin_horizontal_title">Horizontal Margin</string>
                <string name="termux_terminal_margin_vertical_title">Vertical Margin</string>
                <string name="termux_terminal_toolbar_height_title">Toolbar Height</string>
                <string name="termux_delete_tmpdir_files_title">Delete Temp Files</string>
                <string name="termux_delete_tmpdir_files_summary">Delete files older than X days on exit (-1 for none, 0 for all)</string>
            <string name="termux_properties_behaviour_header">Behaviour</string>
                <string name="termux_disable_hardware_keyboard_shortcuts_title">Hardware Keyboard Shortcuts</string>
                <string name="termux_disable_hardware_keyboard_shortcuts_on">Hardware keyboard shortcuts are disabled.</string>
                <string name="termux_disable_hardware_keyboard_shortcuts_off">Hardware keyboard shortcuts are enabled. (Default)</string>
                <string name="termux_disable_terminal_session_change_toast_title">Session Change Toast</string>
                <string name="termux_disable_terminal_session_change_toast_on">Toast when switching sessions is disabled.</string>
                <string name="termux_disable_terminal_session_change_toast_off">Show toast when switching sessions. (Default)</string>
                <string name="termux_enforce_char_based_input_title">Enforce Character Input</string>
                <string name="termux_enforce_char_based_input_on">Force character-based input to fix Samsung keyboard issue.</string>
                <string name="termux_enforce_char_based_input_off">Use default input mode. (Default)</string>
                <string name="termux_extra_keys_text_all_caps_title">Extra Keys Text All Caps</string>
                <string name="termux_extra_keys_text_all_caps_on">Extra keys text will be capitalized. (Default)</string>
                <string name="termux_extra_keys_text_all_caps_off">Extra keys text will not be capitalized.</string>
                <string name="termux_hide_soft_keyboard_on_startup_title">Hide Keyboard On Startup</string>
                <string name="termux_hide_soft_keyboard_on_startup_on">Hide soft keyboard when app starts.</string>
                <string name="termux_hide_soft_keyboard_on_startup_off">Do not hide soft keyboard on startup. (Default)</string>
                <string name="termux_run_termux_am_socket_server_title">Run AM Socket Server</string>
                <string name="termux_run_termux_am_socket_server_on">Run socket server for plugin communication. (Default)</string>
                <string name="termux_run_termux_am_socket_server_off">Disable socket server (will break some plugins).</string>
                <string name="termux_terminal_onclick_url_open_title">Open URLs Automatically</string>
                <string name="termux_terminal_onclick_url_open_on">URLs in terminal will open on tap. (Default)</string>
                <string name="termux_terminal_onclick_url_open_off">URLs will not open automatically.</string>
                <string name="termux_ctrl_space_workaround_title">Ctrl+Space Workaround</string>
                <string name="termux_ctrl_space_workaround_on">Use workaround for Ctrl+Space on certain ROMs.</string>
                <string name="termux_ctrl_space_workaround_off">Use default Ctrl+Space handling. (Default)</string>
                <string name="termux_fullscreen_title">Fullscreen</string>
                <string name="termux_fullscreen_on">Enable fullscreen mode.</string>
                <string name="termux_fullscreen_off">Use normal screen mode. (Default)</string>
                <string name="termux_use_fullscreen_workaround_title">Fullscreen Workaround</string>
                <string name="termux_use_fullscreen_workaround_on">Use fullscreen workaround for better compatibility.</string>
                <string name="termux_use_fullscreen_workaround_off">Do not use fullscreen workaround. (Default)</string>
            <string name="termux_properties_receivers_header">File Receivers</string>
                <string name="termux_disable_file_share_receiver_title">File Share Receiver</string>
                <string name="termux_disable_file_share_receiver_on">File sharing is disabled.</string>
                <string name="termux_disable_file_share_receiver_off">File sharing is enabled. (Default)</string>
                <string name="termux_disable_file_view_receiver_title">File View Receiver</string>
                <string name="termux_disable_file_view_receiver_on">File viewing is disabled.</string>
                <string name="termux_disable_file_view_receiver_off">File viewing is enabled. (Default)</string>
</resources>