<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="logging"
        app:title="@string/termux_logging_header">

        <ListPreference
            app:defaultValue="1"
            app:key="log_level"
            app:title="@string/termux_log_level_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="terminal_view_key_logging_enabled"
            app:summaryOff="@string/termux_terminal_view_key_logging_enabled_off"
            app:summaryOn="@string/termux_terminal_view_key_logging_enabled_on"
            app:title="@string/termux_terminal_view_key_logging_enabled_title" />

        <SwitchPreferenceCompat
            app:key="plugin_error_notifications_enabled"
            app:summaryOff="@string/termux_plugin_error_notifications_enabled_off"
            app:summaryOn="@string/termux_plugin_error_notifications_enabled_on"
            app:title="@string/termux_plugin_error_notifications_enabled_title" />

        <SwitchPreferenceCompat
            app:key="crash_report_notifications_enabled"
            app:summaryOff="@string/termux_crash_report_notifications_enabled_off"
            app:summaryOn="@string/termux_crash_report_notifications_enabled_on"
            app:title="@string/termux_crash_report_notifications_enabled_title" />

    </PreferenceCategory>

</PreferenceScreen>
