<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/termux_debugging_preferences_title"
        app:summary="@string/termux_debugging_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.DebuggingPreferencesFragment"/>

    <Preference
        app:title="@string/termux_terminal_io_preferences_title"
        app:summary="@string/termux_terminal_io_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.TerminalIOPreferencesFragment"/>

    <Preference
        app:title="@string/termux_terminal_view_preferences_title"
        app:summary="@string/termux_terminal_view_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.TerminalViewPreferencesFragment"/>

    <Preference
        app:title="@string/termux_properties_preferences_title"
        app:summary="@string/termux_properties_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.TermuxPropertiesPreferencesFragment"/>

</PreferenceScreen>
